added .env file

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT = '3036'
+REACT_APP_EMAILJS_SERVICE_ID=service_lskckh8
+REACT_APP_EMAILJS_TEMPLATE_ID=template_s3a41ht
+REACT_APP_EMAILJS_USER_ID=b6m2ibEG_uK-BVgH8
